enhance: upgrade conan version to v2
Signed-off-by: Yellow Shine <sammy.huang@zilliz.com>

--- a/.github/workflows/publish-gpu-builder.yaml
+++ b/.github/workflows/publish-gpu-builder.yaml
@@ -8,12 +8,14 @@ on:
     paths:
       - 'build/docker/builder/gpu/**'
       - '.github/workflows/publish-gpu-builder.yaml'
+      - 'scripts/install_deps.sh'
       - '!**.md'
   pull_request:
     # file paths to consider in the event. Optional; defaults to all.
     paths:
       - 'build/docker/builder/gpu/**'
       - '.github/workflows/publish-gpu-builder.yaml'
+      - 'scripts/install_deps.sh'
       - '!**.md'
 
 concurrency:
