--- a/.github/workflows/publish-builder.yaml
+++ b/.github/workflows/publish-builder.yaml
@@ -8,12 +8,14 @@ on:
     paths:
       - 'build/docker/builder/cpu/**'
       - '.github/workflows/publish-builder.yaml'
+      - 'scripts/install_deps.sh'
       - '!**.md'
   pull_request:
     # file paths to consider in the event. Optional; defaults to all.
     paths:
       - 'build/docker/builder/cpu/**'
       - '.github/workflows/publish-builder.yaml'
+      - 'scripts/install_deps.sh'
       - '!**.md'
 
 concurrency:
