feat: [skip e2e] effective way to use cache (#34774)
issue: https://github.com/milvus-io/milvus/issues/34876
1. try best to download cache
2. upload cache if it is not pull request

Signed-off-by: Yellow Shine <sammy.huang@zilliz.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -80,7 +80,7 @@ jobs:
           echo "useasan=ON" >> $GITHUB_ENV
           echo "Setup USE_ASAN to true since cpp file(s) changed"
       - name: Download Caches
-        uses: ./.github/actions/cache
+        uses: ./.github/actions/cache-restore
         with:
           os: 'ubuntu20.04'
           kind: 'cpp'
@@ -94,6 +94,13 @@ jobs:
         with:
           name: code
           path: code.zip
+      - name: Save Caches
+        uses: ./.github/actions/cache-save
+        if: github.event_name != 'pull_request'
+        with:
+          os: 'ubuntu20.04'
+          kind: 'cpp'
+
   UT-Cpp:
     name: UT for Cpp
     needs: Build
@@ -117,7 +124,7 @@ jobs:
           unzip code.zip
           rm code.zip
       - name: Download Caches
-        uses: ./.github/actions/cache
+        uses: ./.github/actions/cache-restore
         with:
           os: 'ubuntu20.04'
           kind: 'cpp'
@@ -142,6 +149,12 @@ jobs:
             ./lcov_output.info
             *.info
             *.out
+      - name: Save Caches
+        uses: ./.github/actions/cache-save
+        if: github.event_name != 'pull_request'
+        with:
+          os: 'ubuntu20.04'
+          kind: 'cpp'
   UT-Go:
     name: UT for Go
     needs: Build
@@ -165,7 +178,7 @@ jobs:
           unzip code.zip
           rm code.zip
       - name: Download Caches
-        uses: ./.github/actions/cache
+        uses: ./.github/actions/cache-restore
         with:
           os: 'ubuntu20.04'
           kind: 'go'
@@ -234,6 +247,13 @@ jobs:
             ./it_coverage.txt
             *.info
             *.out
+      - name: Save Caches
+        uses: ./.github/actions/cache-save
+        if: github.event_name != 'pull_request'
+        with:
+          os: 'ubuntu20.04'
+          kind: 'go'
+
   codecov:
     name: Upload Code Coverage
     needs: [UT-Cpp, UT-Go, integration-test]
