feat: Add null bitmap concatenater
Signed-off-by: sunby <sunbingyi1992@gmail.com>

--- a/internal/core/src/common/CMakeLists.txt
+++ b/internal/core/src/common/CMakeLists.txt
@@ -24,6 +24,7 @@ set(COMMON_SRC
         EasyAssert.cpp
         FieldData.cpp
         RegexQuery.cpp
+        NullBitmapConcatenater.cpp
         )
 
 add_library(milvus_common SHARED ${COMMON_SRC})
