enhance: disable ccache on github actions
Signed-off-by: Yellow Shine <sammy.huang@zilliz.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,6 +12,7 @@ on:
       - 'build/**'
       - 'tests/integration/**' # run integration test
       - '.github/workflows/main.yaml'
+      - '.github/actions'
       - '.env'
       - docker-compose.yml
       - Makefile
@@ -28,6 +29,7 @@ on:
       - 'build/**'
       - 'tests/integration/**' # run integration test
       - '.github/workflows/main.yaml'
+      - '.github/actions'
       - '.env'
       - docker-compose.yml
       - Makefile
