enhance: remove unused code for StorageV2
Signed-off-by: zhenshan.cao <zhenshan.cao@zilliz.com>

--- a/internal/core/src/exec/CMakeLists.txt
+++ b/internal/core/src/exec/CMakeLists.txt
@@ -30,4 +30,4 @@ set(MILVUS_EXEC_SRCS
 
 add_library(milvus_exec STATIC ${MILVUS_EXEC_SRCS})
 
-target_link_libraries(milvus_exec milvus_common milvus-storage ${CONAN_LIBS})
+target_link_libraries(milvus_exec milvus_common ${CONAN_LIBS})
