--- a/internal/core/src/index/CMakeLists.txt
+++ b/internal/core/src/index/CMakeLists.txt
@@ -26,6 +26,6 @@ set(INDEX_FILES
 milvus_add_pkg_config("milvus_index")
 add_library(milvus_index SHARED ${INDEX_FILES})
 
-target_link_libraries(milvus_index milvus_storage milvus-storage tantivy_binding)
+target_link_libraries(milvus_index milvus_storage tantivy_binding)
 
 install(TARGETS milvus_index DESTINATION "${CMAKE_INSTALL_LIBDIR}")
