--- a/.github/workflows/mac.yaml
+++ b/.github/workflows/mac.yaml
@@ -37,18 +37,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: 'Generate CCache Hash'
-        env:
-          CORE_HASH: ${{ hashFiles( 'internal/core/**/*.cpp', 'internal/core/**/*.cc', 'internal/core/**/*.c', 'internal/core/**/*.h', 'internal/core/**/*.hpp', 'internal/core/**/CMakeLists.txt') }}
-        run: |
-          echo "corehash=${CORE_HASH}" >> $GITHUB_ENV
-          echo "Set CCache hash to ${CORE_HASH}"
-      - name: Mac Cache CCache Volumes
-        uses: actions/cache@v3
-        with:
-          path: /var/tmp/ccache
-          key: macos-ccache-${{ env.corehash }}
-          restore-keys: macos-ccache-
       - name: Setup Python environment
         uses: actions/setup-python@v4
         with:
@@ -77,11 +65,7 @@ jobs:
           CCACHE_COMPRESSLEVEL: 5
           CCACHE_MAXSIZE: 2G
         run: |
-          if [[ ! -d "/var/tmp/ccache" ]];then
-            mkdir -p /var/tmp/ccache
-          fi
-          ls -alh /var/tmp/ccache
-          brew install libomp ninja openblas ccache pkg-config
+          brew install libomp ninja openblas pkg-config
           pip3 install conan==1.61.0
           if [[ ! -d "/usr/local/opt/llvm" ]]; then
             ln -s /usr/local/opt/llvm@14 /usr/local/opt/llvm
