--- a/tests/python_client/requirements.txt
+++ b/tests/python_client/requirements.txt
@@ -1,7 +1,7 @@
 --extra-index-url https://test.pypi.org/simple/
 pytest-cov==2.8.1
 requests==2.26.0
-scikit-learn==1.4.2
+scikit-learn
 timeout_decorator==0.5.0
 ujson==5.5.0
 pytest==7.2.0
