--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -478,8 +478,8 @@ dataCoord:
       # clustering compaction will try best to distribute data into segments with size range in [preferSegmentSize, maxSegmentSize].
       # data will be clustered by preferSegmentSize, if a cluster is larger than maxSegmentSize, will spilt it into multi segment
       # buffer between (preferSegmentSize, maxSegmentSize) is left for new data in the same cluster(range), to avoid globally redistribute too often
-      preferSegmentSize: 512m       
-      maxSegmentSize: 1024m
+      preferSegmentSizeRatio: 0.8
+      maxSegmentSizeRatio: 1
       
       # vector clustering related
       maxTrainSizeRatio: 0.8 # max data size ratio in Kmeans train, if larger than it, will down sampling to meet this limit
