enhance: Skip Amazon&Rockylinux instead of comment job
Related to #35084

Signed-off-by: Congqi Xia <congqi.xia@zilliz.com>

--- a/.github/workflows/code-checker.yaml
+++ b/.github/workflows/code-checker.yaml
@@ -61,54 +61,56 @@ jobs:
         run: |
           ./build/builder.sh /bin/bash -c "make check-proto-product && make verifiers"
 
-  # amazonlinux:
-  #   name: Code Checker Amazonlinux 2023
-  #   # Run in amazonlinux docker
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 180
-  #   steps:
-  #     - name: Maximize build space
-  #       uses: easimon/maximize-build-space@master
-  #       if: ${{ ! startsWith(runner.name, 'self') }} # skip this step if it is self-hosted runner
-  #       with:
-  #         root-reserve-mb: 20480
-  #         swap-size-mb: 1024
-  #         remove-dotnet: 'true'
-  #         remove-android: 'true'
-  #         remove-haskell: 'true'
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #     - name: Download Caches
-  #       uses: ./.github/actions/cache
-  #       with:
-  #         os: 'amazonlinux2023'
-  #     - name: Code Check
-  #       run: |
-  #         sed -i 's/ubuntu22.04/amazonlinux2023/g' .env
-  #         ./build/builder.sh /bin/bash -c "make install"
+  amazonlinux:
+    if: ${{ false }} # skip for now
+    name: Code Checker Amazonlinux 2023
+    # Run in amazonlinux docker
+    runs-on: ubuntu-latest
+    timeout-minutes: 180
+    steps:
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        if: ${{ ! startsWith(runner.name, 'self') }} # skip this step if it is self-hosted runner
+        with:
+          root-reserve-mb: 20480
+          swap-size-mb: 1024
+          remove-dotnet: 'true'
+          remove-android: 'true'
+          remove-haskell: 'true'
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Download Caches
+        uses: ./.github/actions/cache
+        with:
+          os: 'amazonlinux2023'
+      - name: Code Check
+        run: |
+          sed -i 's/ubuntu22.04/amazonlinux2023/g' .env
+          ./build/builder.sh /bin/bash -c "make install"
 
-  # rockylinux:
-  #   name: Code Checker rockylinux8
-  #   # Run in amazonlinux docker
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 180
-  #   steps:
-  #     - name: Maximize build space
-  #       uses: easimon/maximize-build-space@master
-  #       if: ${{ ! startsWith(runner.name, 'self') }} # skip this step if it is self-hosted runner
-  #       with:
-  #         root-reserve-mb: 20480
-  #         swap-size-mb: 1024
-  #         remove-dotnet: 'true'
-  #         remove-android: 'true'
-  #         remove-haskell: 'true'
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #     - name: Download Caches
-  #       uses: ./.github/actions/cache
-  #       with:
-  #         os: 'rockylinux8'
-  #     - name: Code Check
-  #       run: |
-  #         sed -i 's/ubuntu22.04/rockylinux8/g' .env
-  #         ./build/builder.sh /bin/bash -c "make install"
+  rockylinux:
+    if: ${{ false }} # skip for now
+    name: Code Checker rockylinux8
+    # Run in amazonlinux docker
+    runs-on: ubuntu-latest
+    timeout-minutes: 180
+    steps:
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        if: ${{ ! startsWith(runner.name, 'self') }} # skip this step if it is self-hosted runner
+        with:
+          root-reserve-mb: 20480
+          swap-size-mb: 1024
+          remove-dotnet: 'true'
+          remove-android: 'true'
+          remove-haskell: 'true'
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Download Caches
+        uses: ./.github/actions/cache
+        with:
+          os: 'rockylinux8'
+      - name: Code Check
+        run: |
+          sed -i 's/ubuntu22.04/rockylinux8/g' .env
+          ./build/builder.sh /bin/bash -c "make install"
