enhance: Add config to disable mmap index
this PR add config to disable mmap index. when you want to enable mmap
index, you should limit the binlog size and chunk cache disk size to
half of physical disk size. for example, load a collection with only
vector data, suppose the vector binlog size is 10G. then chunk cache
need 10G disk to mmap the vector raw data, and load index need almost
another 10G disk to mmap the vector index.

so if enable mmap index, make sure that:
1. limit `quotaAndLimits.limitWriting.diskProtection.diskQuota` to less
than 50% of physical disk capacity
2. set `queryNode.mmap.maxDiskUsagePercentageForMmapAlloc` eqauls to `quotaAndLimits.limitWriting.diskProtection.diskQuota`, to make chunk cache works well

Signed-off-by: Wei Liu <wei.liu@zilliz.com>

--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -410,6 +410,7 @@ queryNode:
     warmup: disable
   mmap:
     mmapEnabled: false # Enable mmap for loading data
+    vectorIndexMmapEnabled: false # Enable mmap for loading vector index
     growingMmapEnabled: false # Enable mmap for using in growing raw data
     fixedFileSizeForMmapAlloc: 1 # tmp file size for mmap chunk manager
     maxDiskUsagePercentageForMmapAlloc: 50 # disk percentage used in mmap chunk manager
