update multi proxy
Signed-off-by: zhuwenxing <wenxing.zhu@zilliz.com>

--- a/tests/python_client/requirements.txt
+++ b/tests/python_client/requirements.txt
@@ -25,7 +25,7 @@ PyYAML==6.0
 pytest-sugar==0.9.5
 pytest-parallel
 pytest-random-order
-
+dnspython==2.6.1
 # for customize config test
 python-benedict==0.24.3
 timeout-decorator==0.5.0
