--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -242,6 +242,8 @@ proxy:
   maxConnectionNum: 10000 # the max client info numbers that proxy should manage, avoid too many client infos
   gracefulStopTimeout: 30 # seconds. force stop node without graceful stop
   slowQuerySpanInSeconds: 5 # query whose executed time exceeds the `slowQuerySpanInSeconds` can be considered slow, in seconds.
+  queryNodePooling:
+    size: 10 # the size for shardleader(querynode) client pool
   http:
     enabled: true # Whether to enable the http server
     debug_mode: false # Whether to enable http server debug mode
@@ -390,6 +392,8 @@ queryNode:
   queryStreamBatchSize: 4194304 # return batch size of stream query
   ip:  # if not specified, use the first unicastable address
   port: 21123
+  workerPooling:
+    size: 10 # the size for worker querynode client pool
   grpc:
     serverMaxSendSize: 536870912
     serverMaxRecvSize: 268435456
