--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -141,7 +141,7 @@ jobs:
       - name: Start Service
         shell: bash
         run: |
-          docker-compose up -d azurite
+          docker compose up -d azurite
       - name: UT
         run: |
           chmod +x build/builder.sh
@@ -193,7 +193,7 @@ jobs:
       - name: Start Service
         shell: bash
         run: |
-          docker-compose up -d pulsar etcd minio azurite
+          docker compose up -d pulsar etcd minio azurite
       - name: UT
         run: |
           chmod +x build/builder.sh
@@ -245,7 +245,7 @@ jobs:
       - name: Start Service
         shell: bash
         run: |
-          docker-compose up -d pulsar etcd minio
+          docker compose up -d pulsar etcd minio
       - name: IntegrationTest
         run: |
           chmod +x build/builder.sh
