--- a/.github/workflows/publish-test-images.yaml
+++ b/.github/workflows/publish-test-images.yaml
@@ -39,14 +39,14 @@ jobs:
         shell: bash
         working-directory: tests/docker
         run: |
-          docker-compose pull --ignore-pull-failures pytest
+          docker compose pull pytest
       - name: Docker Build
         shell: bash
         working-directory: tests/docker
         run: |
-          IMAGE_TAG=${{ steps.extracter.outputs.version }}-${{ steps.extracter.outputs.sha_short }} docker-compose build pytest
+          IMAGE_TAG=${{ steps.extracter.outputs.version }}-${{ steps.extracter.outputs.sha_short }} docker compose build pytest
           export LATEST_IMAGE_TAG=${{ steps.extracter.outputs.version }}-${{ steps.extracter.outputs.sha_short }}
-          IMAGE_TAG=latest docker-compose build pytest
+          IMAGE_TAG=latest docker compose build pytest
       - name: Docker Push
         if: success() && github.event_name == 'push' && github.repository == 'milvus-io/milvus'
         continue-on-error: true
@@ -55,8 +55,8 @@ jobs:
         run: |
           docker login -u ${{ secrets.DOCKERHUB_USER }} \
                        -p ${{ secrets.DOCKERHUB_TOKEN }}
-          IMAGE_TAG=${{ steps.extracter.outputs.version }}-${{ steps.extracter.outputs.sha_short }} docker-compose push pytest
-          IMAGE_TAG=latest docker-compose push pytest
+          IMAGE_TAG=${{ steps.extracter.outputs.version }}-${{ steps.extracter.outputs.sha_short }} docker compose push pytest
+          IMAGE_TAG=latest docker compose push pytest
           echo "Push pytest image Succeeded"
       - name: Update Pytest Image Changes
         if: success() && github.event_name == 'push' && github.repository == 'milvus-io/milvus'
