enhance: change autoindex default metric type (#34328)
issue: #34304 
pr: #34261

Signed-off-by: chasingegg <chao.gao@zilliz.com>

--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -750,4 +750,4 @@ trace:
 
 autoIndex:
   params:
-    build: '{"M": 18,"efConstruction": 240,"index_type": "HNSW", "metric_type": "IP"}'
+    build: '{"M": 18,"efConstruction": 240,"index_type": "HNSW", "metric_type": "COSINE"}'
