feature: add go client cases for code checker
Signed-off-by: ThreadDao <yufen.zong@zilliz.com>

--- a/.github/workflows/code-checker.yaml
+++ b/.github/workflows/code-checker.yaml
@@ -16,6 +16,7 @@ on:
       - 'cmd/**'
       - 'build/**'
       - 'tests/integration/**'
+      - 'tests/go_client/**'
       - '.github/workflows/code-checker.yaml'
       - '.env'
       - docker-compose.yml
