update cdc test
Signed-off-by: zhuwenxing <wenxing.zhu@zilliz.com>

--- a/tests/python_client/requirements.txt
+++ b/tests/python_client/requirements.txt
@@ -49,11 +49,11 @@ tenacity==8.1.0
 etcd-sdk-python==0.0.4
 deepdiff==6.7.1
 
-# for test result anaylszer
+# for test result analyzer
 prettytable==3.8.0
 pyarrow==14.0.1
 fastparquet==2023.7.0
-
+matplotlib==3.8.4
 # for bf16 datatype
 jax==0.4.13
 jaxlib==0.4.13
